# abstract_message_queue

./: CMakeLists.txt  README.md
include/common/: Helper.hpp  IpcInterface.hpp
src/client/: main.cpp
src/common/: IpcInterface.cpp
src/server/: main.cpp
